tests/ui/parallel-rustc/infer-unwrap-none-issue-120786.stderr
error[E0282]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:4:14
   |
LL |     |x: u32, y| x;
   |              ^
   |
help: consider giving this closure parameter an explicit type
   |
LL |     |x: u32, y: /* Type */| x;
   |               ++++++++++++

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:10:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:15:9
   |
LL |     |x| String::from("x".as_ref());
   |         ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed for `&_`
  --> $DIR/infer-unwrap-none-issue-120786.rs:20:9
   |
LL |     let _ = "x".as_ref();
   |         ^       ------ type must be known at this point
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: &T = "x".as_ref();
   |          ++++

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:25:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:32:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:41:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:50:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:57:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error[E0283]: type annotations needed
  --> $DIR/infer-unwrap-none-issue-120786.rs:66:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;
   = note: cannot satisfy `str: AsRef<_>`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
